# FlatBuffer

./: local.properties
app/: build.gradle
app/flatbuffer/: repos_json.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  repos_schema_generated.h
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/java/com/example/hellojni/Repos/: Repo.java  ReposList.java  User.java
app/src/main/java/com/example/hellojni/ReposNormal/: Repo.java  ReposList.java  User.java
app/src/main/res/layout/: activity_hello_jni.xml
app/src/main/res/values/: strings.xml
